kustomize/overlays/homecloud/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: nextcloud
  name: nextcloud-route
spec:
  parentRefs:
    - namespace: traefik
      name: traefik-gateway
  hostnames:
    - luwix.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-service
          port: 80
